dump.txt
translation-workflow> build (lib + exe)
Preprocessing library for translation-workflow-0.1.0.0..
Building library for translation-workflow-0.1.0.0..
[5 of 7] Compiling TransState

/Users/franklindyer/Documents/dev/haskell-translator/src/TransState.hs:36:42: error: [GHC-18872]
    • Couldn't match type ‘TransState’ with ‘TransState -> TransState’
        arising from a functional dependency between:
          constraint ‘MonadState
                        (TransState -> TransState) (EventM () TransState)’
            arising from a use of ‘state’
          instance ‘MonadState s (EventM n s)’ at <no location info>
    • In the expression: state (\ ts -> ((), nextPassage))
      In a case alternative:
          VtyEvent (V.EvKey V.KDown []) -> state (\ ts -> ((), nextPassage))
      In the expression:
        case e of
          VtyEvent (V.EvKey V.KDown []) -> state (\ ts -> ((), nextPassage))
          VtyEvent (V.EvKey V.KUp []) -> state (\ ts -> ((), prevPassage))
   |
36 |         VtyEvent (V.EvKey V.KDown []) -> state (\ts -> ((), nextPassage))
   |                                          ^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package translation-workflow-0.1.0.0 (scroll up to its section to see the error)
       using:
       /Users/franklindyer/.stack/setup-exe-cache/aarch64-osx/Cabal-simple_6HauvNHV_3.10.1.0_ghc-9.6.4 --verbose=1 --builddir=.stack-work/dist/aarch64-osx/ghc-9.6.4 build lib:translation-workflow exe:translation-workflow-exe --ghc-options ""
       Process exited with code: ExitFailure 1 
